--- a/src/main/webapp/WEB-INF/views/new/main.html
+++ b/src/main/webapp/WEB-INF/views/new/main.html
@@ -92,9 +92,9 @@
                                 <h4 class="widget_title">О нас</h4>
                                 <div class="widget_text">
                                     <span class="foot_title">Название компании</span><br/>
-                                    <p>ХЗ</p>
-                                    <div class="top10 clearfix"><p>ХЗ
-                                        ХЗ</p> </div>
+                                    <p>ТЕКСТ</p>
+                                    <div class="top10 clearfix"><p>ТЕКСТ
+                                        ТЕКСТ</p> </div>
                                 </div>
                                 <div class="clear"></div>
                             </div>
@@ -111,10 +111,10 @@
                                 <h4 class="widget_title">Контакты</h4>
                                 <div class="widget_text">
                                     <div class="world_map">
-                                        <div class="icon_home sub_text2"> 27 Street, Road Norh, New York </div>
-                                        <div class="icon_tele2 sub_text2"> +7 (201) 9-556-700</div>
-                                        <div class="icon_fax sub_text2"> +7 (201) 9-556-707</div>
-                                        <div class="icon_mail sub_text2"> <a href="#">support@managov.com</a></div>
+                                        <div class="icon_home sub_text2"> Манежная 27, Одесса, Украина </div>
+                                        <div class="icon_tele2 sub_text2"> +0 (000) 0-000-0</div>
+                                        <div class="icon_fax sub_text2"> +0 (000) 0-000-0</div>
+                                        <div class="icon_mail sub_text2"> <a href="#">support@suport.com</a></div>
                                         <div class="icon_time sub_text2"> 8 AM -  5 PM  Always  24/7</div>
                                     </div>
                                 </div>
